--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
                 <a id="senhaforget" href=""> Esqueceu a senha?</a>
             </div>
             <div id="cadastro01">
-                <a id="cadastro" href="InterfaceSubli/index.html">Não tem uma conta? Cadastre-se!</a>
+                <a id="cadastro" href="./index.html">Não tem uma conta? Cadastre-se!</a>
             </div>
         </section>
         
