--- a/index.html
+++ b/index.html
@@ -4,46 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel=icon href="ImagensInterface/IconeSublimoon.png">
-    <link rel="stylesheet" href="style.css">
-    <title>Cadastro de usuário</title>
+    <link rel=icon href="InterfaceSubli/ImagensInterface/IconeSublimoon.png">
+    <link rel="stylesheet" href="style02.css">
+    <title>Login</title>
 </head>
+
 <body>
     <main>
         <img id="sublimoonimagem" src="InterfaceSubli/ImagensInterface/IconeSublimoon.png" alt="Icone Sublimoon"  />
-        <h1>Cadastrar-se</h1>
-        <form action="/pagina-processa-dados-do-form" method="post">
-        <section class="todos">
+       <!-- <h1>Login</h1> -->
+
             <div id="nome01">
-                <label for="nome">Nome:</label>
+                <label for="nome">E-mail:</label>
                 <input type="text" id="nome" name="usuario_nome" />
             </div>
             <div id="senha01">
                 <label for="senha">Senha:</label>
                 <input type="password" id="senha" name="usuario_senha" />
             </div>
-            <div id="confsenha01">
-                <label for="confirmarsenha">Confirme sua senha:</label>
-                <input type="password" id="senhaconf" name="usuario_senhaconf" />
+
+        <section class="links">
+            <div id="senhaforget01">
+                <a id="senhaforget" href=""> Esqueceu a senha?</a>
             </div>
-            <div id="CEP01">
-                <label for="CEP">CEP:</label>
-                <input type="number" id="CEP" name="usuario_cep" />
-            </div>
-            <div id="email01">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="usuario_email" />
-            </div>
-            <div id="tel01">
-                <label for="telefone">Telefone:</label>
-                <input type="number" id="telefone" name="usuario_tel" />
+            <div id="cadastro01">
+                <a id="cadastro" href="./cadastro.html">Não tem uma conta? Cadastre-se!</a>
             </div>
         </section>
         
             <div class="button">
-                <button type="submit">Criar conta</button>
+                <button type="submit">Entrar</button>
             </div>
-        </form>
+        
     </main>
 </body>
 </html>
