recuperação de senha

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <section class="links">
             <div id="senhaforget01">
-                <a id="senhaforget" href=""> Esqueceu a senha?</a>
+                <a id="senhaforget" href="" onclick="rec()"> Esqueceu a senha?</a>
             </div>
             <div id="cadastro01">
                 <a id="cadastro" href="./cadastro.html">Não tem uma conta? Cadastre-se!</a>
@@ -35,6 +35,8 @@
             <div class="button">
                 <button type="submit">Entrar</button>
             </div>
+
+        <script src="index.js"></script>
         
     </main>
 </body>
